<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.AboutUsFragment"
    android:background="@color/colorFondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorFondo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:text="@string/mercado_esclavo"
                android:textColor="@color/colorTexto"
                android:textSize="30sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:text="@string/historia"
                android:textColor="@color/colorTexto"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/texto_historia"
                android:textColor="@color/colorTexto"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:text="@string/mision"
                android:textColor="@color/colorTexto"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/texto_mision"
                android:textColor="@color/colorTexto"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:text="@string/vision"
                android:textColor="@color/colorTexto"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/texto_vision"
                android:textColor="@color/colorTexto"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:text="@string/valores"
                android:textColor="@color/colorTexto"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/texto_valores"
                android:textColor="@color/colorTexto"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:text="Sobre Mi"
                android:textColor="@color/colorTexto"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/foto_personal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/texto_sobre_mi"
                android:textColor="@color/colorTexto"
                android:textSize="15sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:text="@string/contacto"
                android:textColor="@color/colorTexto"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFondoCeldaProducto"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/texto_contacto"
                android:textColor="@color/colorTexto"
                android:textSize="15sp"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>