<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SobreDesarrolladorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/foto_personal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorFondoCeldaProducto"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/texto_sobre_mi"
            android:textColor="@color/colorTexto"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorFondoCeldaProducto"
            android:gravity="center_horizontal"
            android:text="@string/contacto"
            android:textColor="@color/colorTexto"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorFondoCeldaProducto"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/texto_contacto"
            android:textColor="@color/colorTexto"
            android:textSize="15sp" />
    </LinearLayout>
</FrameLayout>