<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    android:padding="16dp"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginActivity_TextInputLayout_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/colorTexto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginActivity_TextInputEditText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorTexto"
                android:gravity="center_horizontal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTexto"
                android:textColorHint="@color/colorTexto" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LoginActivity_TextInputLayout_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorTexto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginActivity_TextInputEditText_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorTexto"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorTexto"
                android:textColorHint="@color/colorTexto" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/LoginActivity_Button_IniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorDestacado"
            android:text="@string/inciar_sesion"
            android:textColor="@color/colorTexto" />

        <Button
            android:id="@+id/LoginActivity_Button_CrearUnaCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorDestacado"
            android:text="@string/crear_una_cuenta"
            android:textColor="@color/colorTexto" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/LoginActivity_LoginButton_IniciarSesionFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/LoginActivity_TextView_IngresarSinRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/ingresar_sin_registrarse"
            android:textColor="@color/colorTexto"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>